[package]
name = "crdb-harness"
description = "Test Harness for CockroachDB"
version = "0.0.1"
authors = ["Sean Klein <sean@oxide.computer>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oxidecomputer/crdb-harness"
keywords = ["test", "database", "cockroach"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1.80"
camino = "1.1"
camino-tempfile = "1.1"
futures = "0.3"
libc = "0.2.158"
thiserror = "1.0"
tokio = { version = "1.32", default-features = false, features = [ "fs", "macros", "rt-multi-thread", "process" ] }
tokio-postgres = { version = "0.7", features = [ "with-chrono-0_4", "with-uuid-1" ] }

[build-dependencies]
anyhow = "1.0"
camino = "1.1"
flate2 = "1.0.33"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"]  }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.32", default-features = false, features = [ "fs", "macros", "rt-multi-thread", "process" ] }
